# 04_create_agent

./: .env  .gitignore  main.py  pyproject.toml  run.py
agent/: langchain_assitant.py  milvus_data_sync.py  redis_data_sync.py  redis_demo.py
agent/prompts/: system_prompt.txt
api/: main.py
