[project]
name = "04-create-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-huggingface>=1.2.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.13",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pymilvus>=2.6.12",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
